--- a/Site funcional/API-projeto-site/public/css/comunidade.css
+++ b/Site funcional/API-projeto-site/public/css/comunidade.css
@@ -10,7 +10,7 @@
 
 .card{
     width: 250px;
-    height: 300px;
+    height: 200px;
     box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.05),
                 inset -5px -5px 5px rgba(255, 255, 255, 0.5),
                 -5px -5px 5px rgba(255, 255, 255, 0.05),
@@ -23,7 +23,7 @@
 
 .box{
     width: 230px;
-    height: 280px;
+    height: 180px;
     background-color: #EBF2FC;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
     border-radius: 15px;
@@ -32,12 +32,13 @@
 .box:hover{
     transform: translateY(-30px);
     box-shadow: 0 10px 40px rgba(0, 0, 0, 0.4);
-    background: linear-gradient(45deg, #B95CE4, #4F29CD);
+    border: 1px solid #F8E29C;
     transition: 0.5s;
 }
 
 .box:hover a{
-    background-color: royalblue;
+    background-color: #F8E29C;
+    color: black;
 }
 
 .content{
