--- a/Site funcional/API-projeto-site/public/css/suporte.css
+++ b/Site funcional/API-projeto-site/public/css/suporte.css
@@ -2,6 +2,7 @@
     width: 85%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;    
     /*background-color: chartreuse;*/
