--- a/Site funcional/API-projeto-site/public/css/cadastro.css
+++ b/Site funcional/API-projeto-site/public/css/cadastro.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bad+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mali:wght@300&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; 
+}
+
 body{
     width: 100%;
     height: 100%;
@@ -5,7 +17,7 @@ body{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    /*background-color: rgb(252, 235, 255);*/
+    background-color: #e9f1fa;
    /* background-image: url(/Img/fundo.jpg);*/
     background-size: cover;
     font-family: 'Hind Siliguri', sans-serif;
@@ -27,7 +39,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.459);
+    background-color: #F8E29C;
     border-radius: 10px;
     backdrop-filter: blur(5px);
     box-shadow: 0 25px 45px rgba(0,0,0,0.1);
@@ -84,17 +96,20 @@ fieldset{
     height: 35px;
     border-radius: 10px;
     outline: none;
-    border-color: #FADEE1;
+    border: none;
+    padding-left: 1%;
 }
 
 button{
+    width: 25%;
     border-radius: 10px;
-    background-color: #1a6ac5;
+    background-color: #32e2bb;
+    border: none;
+    color: black;
+    font-weight: bold;
 }
 
-.input-cadastro button{
-    width: 37%;
-}
+
 
 .cadastro{
     width: 90%;
@@ -107,18 +122,22 @@ button{
     margin-top: 5px;
 }
 
-.cadastro button{
+
+#btn_entrar{
     width: 30%;
+    border-radius: 10px;
+    background-color: #32e2bb;
+    border: none;
+    color: black;
+    font-weight: bold;
 }
 
-
-
 .formulario a{
+    color: black;
     text-decoration: none;
 }
 
 .formulario button{
-    
     height: 35px;
 }
 
