--- a/Site funcional/API-projeto-site/public/css/cadastro.css
+++ b/Site funcional/API-projeto-site/public/css/cadastro.css
@@ -25,7 +25,7 @@ body{
 
 .container{
     width: 80%;
-    height: 750px;
+    height: 600px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -69,13 +69,14 @@ form{
 
 .formulario h4{
     width: 100%;
+    margin-top: 15px;
     font-size: 20px;
     text-align: center;
 }
 
 .input-cadastro{
     width: 100%;
-    height: 90%;
+    height: 87%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -103,9 +104,9 @@ fieldset{
 button{
     width: 25%;
     border-radius: 10px;
-    background-color: #32e2bb;
+    background-color: slateblue;
     border: none;
-    color: black;
+    color: white;
     font-weight: bold;
 }
 
@@ -126,14 +127,14 @@ button{
 #btn_entrar{
     width: 30%;
     border-radius: 10px;
-    background-color: #32e2bb;
+    background-color: slateblue;
     border: none;
-    color: black;
+    color: white;
     font-weight: bold;
 }
 
 .formulario a{
-    color: black;
+    color: white;
     text-decoration: none;
 }
 
