--- a/Site funcional/API-projeto-site/public/css/feed.css
+++ b/Site funcional/API-projeto-site/public/css/feed.css
@@ -4,21 +4,131 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    background-color: chartreuse;
+    justify-content: space-around;
+    background-color: #EBF2FC;
 }
 
 .criar-post{
     width: 90%;
-    height: 25%;
-    background-color: darkgreen;
+    height: 38%;
+    background-color: rgb(193, 122, 252);
+    border: 2px solid rgb(193, 122, 252);
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+select{
+    border-radius: 5px;
+    background-color: white;
+    border: none;
+}
+
+.grid{
+    width: 90%;
+    height: 95%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+}
+
+.grid input, .grid textarea{
+    width: 100%;
+    border: none;
+    border-radius: 5px;
+}
+
+.grid textarea{
+    height: 70px;
+}
+
+.grid input{
+    height: 25px;
+}
+
+.grid label{
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.btn_feed{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.btn_feed button{
+    width: 60px;
+    height: 20px;
+    border-radius: 5px;
+    background-color: rebeccapurple;
+    color: white;
+    border: none;
+    text-align: center;
+    font-weight: bold;
 }
 
 .listar-post{
     width: 90%;
-    height: 70%;
+    height: 60%;
     overflow: auto;
-    background-color: darkgrey;
+}
+
+.listar-post::-webkit-scrollbar{ 
+    display: none; 
+}
+
+.post{
+    width: 100%;
+    height: 250px;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    border: 2px dashed rgb(193, 122, 252);
+    background-color: white;
+    margin-bottom: 15px;
+}
+
+.po-titulo{
+    width: 90%;
+    height: 50px;
+    border-bottom: 1px solid silver;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+}
+
+.po-descricao{
+    width: 90%;
+    height: 150px;
+    font-size: 14px;
+    border-bottom: 1px solid silver;
+    
+}
+
+.po-detalhes{
+    width: 90%;
+    height: 25px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.po-autor, .po-data{
+    width: 30%;
+    height: 100%;
+    font-size: 12px;
+    display: flex;
+    color: rgb(82, 81, 81);
+}
+
+.po-autor h4, .po-data h4{
+    font-weight: bold;
 }
 
 
@@ -28,23 +138,61 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: coral;
+    justify-content: space-between;
+}
+
+.ranking p{
+    font-size: 12px;
+    color: gray;
 }
 
 .ranking-geral{
     width: 90%;
-    height: 300px;
-    background-color: cornflowerblue;
+    height: 250px;
+    margin-top: 5px;
+    border-radius: 15px;
+    background-color: #faebba;
+    border: 2px solid #faebba;
 }
 
 .ranking-geral header{
     width: 100%;
     height: 50px;
-    background-color: crimson;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 15px;
+}
+
+.ranking-geral i{
+    padding-right: 30px;
 }
 
 .ranking-geral li{
     width: 100%;
     height: 50px;
-    background-color: darkgray;
+    padding-left: 15px;
+    padding-top: 10px;
+    list-style-type: none;
+    background-color: white;
+    border-bottom: 3px solid #faebba;
+}
+
+#porcentagem{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    height: 70%;
+    text-align: center;
+}
+
+.negrito{
+    font-size: 16px;
+    font-weight: bolder;
+    background-color: white;
+    padding: 20px 10px 20px 10px;
+    border-radius: 50%;
 }
