--- a/Site funcional/API-projeto-site/public/css/index.css
+++ b/Site funcional/API-projeto-site/public/css/index.css
@@ -67,8 +67,10 @@ body{
     background-color: #F8E29C;
     border-radius: 10px;
     backdrop-filter: blur(5px);
-    box-shadow: 0 25px 45px rgba(207, 200, 131, 0.2);
-    border: 1px solid #F8E29C;
+    box-shadow: 0 25px 45px rgba(0,0,0,0.1);
+    border: 1px solid rgba(225, 225, 225, 0.5);
+    border-right: 1px solid rgba(225, 225, 225, 0.2);
+    border-bottom: 1px solid rgba(225, 225, 225, 0.2);
 
 }
 
@@ -122,7 +124,6 @@ fieldset{
     border-radius: 10px;
     outline: none;
     border: none;
-
 }
 
 .esqueci-senha{
@@ -136,9 +137,9 @@ fieldset{
 
 button{
     border-radius: 10px;
-    background-color: #32e2bb;
+    background-color: slateblue;
     border: none;
-    color: black;
+    color: white;
     font-weight: bold;
 }
 
@@ -164,7 +165,7 @@ button{
 
 .formulario a{
     text-decoration: none;
-    color: black;
+    color: white;
     font-weight: bold;
 }
 
