--- a/Site funcional/API-projeto-site/public/css/suporte.css
+++ b/Site funcional/API-projeto-site/public/css/suporte.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;    
-    /*background-color: chartreuse;*/
+    background-color: #EBF2FC;
 }
 
 .chamado{
@@ -14,14 +14,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: royalblue;
     background-color: rgba(255, 255, 255, 0.6);
     border-radius: 10px;
     backdrop-filter: blur(5px);
     box-shadow: 0 25px 45px rgba(0,0,0,0.1);
     border: 1px solid rgba(225, 225, 225, 0.5);
-    border-right: 1px solid rgba(225, 225, 225, 0.2);
-    border-bottom: 1px solid rgba(225, 225, 225, 0.2);
+    border: 2px dashed rgb(193, 122, 252);
 }
 
 .grid{
@@ -51,10 +49,12 @@ fieldset{
 .chamado-input input{
     width: 100%;
     height: 35px;
+    border: 1px solid rgb(193, 122, 252);
     border-radius: 10px;
 }
 
 .chamado-input textarea{
+    border: 1px solid rgb(193, 122, 252);
     border-radius: 10px;
 }
 
@@ -64,6 +64,6 @@ button{
     background-color: slateblue;
     color: white;
     text-decoration: none;
-    font-weight: 400;
+    font-weight: bold;
     border: none;
 }
